# Menohcaml

./: .gitignore  LICENSE  Makefile  README.md  menohcaml.opam  retrieve_data.sh
bindings/: dune  ffi_bindings.ml  jbuild
examples/: dune  jbuild  vgg16_example.ml
lib/: dune  jbuild  menoh.ml
stubgen/: dune  ffi_stubgen.ml  ffi_types_stubgen.ml  jbuild
