(rule
 (targets ffi_generated.ml)
  (deps   ../stubgen/ffi_stubgen.exe)
  (action (with-stdout-to %{targets} (run %{deps} -ml))))

(rule
 (targets ffi_generated_stubs.c)
 (deps    ../stubgen/ffi_stubgen.exe)
  (action (with-stdout-to %{targets} (run %{deps} -c))))

(rule
 (targets ffi_generated_types.ml)
  (deps   ../stubgen/ffi_ml_types_stubgen.exe)
  (action (with-stdout-to %{targets} (run %{deps}))))

(library
 (name menohcaml)
  (public_name menohcaml)
  (modules ffi_generated_types
            ffi_generated
            menoh)
  (preprocess (pps ppx_deriving.std))          
  (c_names ffi_generated_stubs)
  (flags (:standard -w -9-27-32-34))
  (c_flags ((:standard \ -Werror -pedantic -Wall -Wunused) -w))
  (library_flags (-linkall))
  (c_library_flags (:standard (-L/usr/local/lib -lmenoh)))
  (libraries menohcaml_bindings
              ctypes.stubs
              ctypes.foreign
              ctypes)
)


